<resources>
    <string name="app_name">DynamicLocalization</string>
    <string name="button_text_en">English</string>
    <string name="button_text_hi">Hindi</string>
    <string name="button_text_ch">Chinese</string>
    <string name="button_text_arabic">Arabic</string>
    <string name="page_title">Dynamic Localization</string>
    <string name="localize_text">Hello World</string>

</resources>