<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="clickHandler"
            type="com.kowsar.dynamiclocalization.HandleClickEvents" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/localize_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localize_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="30sp"/>



    <Button
        android:id="@+id/button_en"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="72dp"
        android:text="@string/button_text_en"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_ch"
        app:layout_constraintTop_toBottomOf="@+id/localize_text"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="2"
        android:onClick="@{(v)->clickHandler.onButtonClick(v)}"/>

    <Button
        android:id="@+id/button_ch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="72dp"
        android:text="@string/button_text_ch"
        app:layout_constraintStart_toEndOf="@+id/button_en"
        app:layout_constraintEnd_toStartOf="@+id/button_arabic"
        app:layout_constraintTop_toBottomOf="@+id/localize_text"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="2"
        android:onClick="@{(v)->clickHandler.onButtonClick(v)}"/>
    <Button
        android:id="@+id/button_arabic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginLeft="10dp"
        android:text="@string/button_text_arabic"
        app:layout_constraintStart_toEndOf="@+id/button_ch"
        app:layout_constraintEnd_toStartOf="@+id/button_hi"
        app:layout_constraintTop_toBottomOf="@+id/localize_text"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="2"
        android:onClick="@{(v)->clickHandler.onButtonClick(v)}"/>

    <Button
        android:id="@+id/button_hi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/button_text_hi"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintStart_toEndOf="@+id/button_arabic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localize_text"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="2"
        android:onClick="@{(v)->clickHandler.onButtonClick(v)}"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>